--- a/app-cadastro-pessoa/app/src/main/AndroidManifest.xml
+++ b/app-cadastro-pessoa/app/src/main/AndroidManifest.xml
@@ -5,21 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".utility.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".CustomApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityCadastroPessoas" android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".activities.ActivityCadastroPessoas"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.ActivityDetalhesPessoa"
+            android:parentActivityName=".activities.MainActivity" />
     </application>
 
 </manifest>
